fix footer and contact us spacing

--- a/mediaquery.css
+++ b/mediaquery.css
@@ -122,3 +122,19 @@
         width: 300px;
     }
 }
+
+@media screen and (max-width: 486px) {
+    footer .nav-links {
+        gap: .4rem;
+    }
+
+    .contact-info-container a img.email-icon {
+        width: 60px;
+        height: 60px;
+    }
+    
+    .contact-info-container img.icons {
+        width: 50px;
+        height: 50px;
+    }
+}
